--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,8 +3,15 @@
         <title>helloooo</title>
     </head>
 <body>
+    <div>
+        <h1><a href="/">blah</a></h1>
+    </div>
     {% for post in posts %}
-        {{ post }}
+    <div>
+        <p>published: {{ post.published_date }}</p>
+        <h2><a href="">{{ post.title }}</a></h2>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
     {% endfor %}
 </body>
 </html>
